--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,5 +47,81 @@ table {
 
 .navLink:hover {
 	background-color: #47a39c;
-	/* border: 1px solid white; */
 }
+
+
+
+
+
+
+
+/* CHANGE THE UL LI TO CLASSES!!!!!!!! OR PUT THESE STYLES INTO THE PETSORTING COMPONENT */
+
+ul li{
+  position: relative;
+  padding: 0 25px 0 0;
+}
+
+ul li input[type=radio]{
+  position: absolute;
+  visibility: hidden;
+}
+
+ul li label{
+  display: block;
+  position: relative;
+  padding: 5px 0 5px 40px;
+  /* margin: 10px auto; */
+  /* height: 30px; */
+  z-index: 9;
+  cursor: pointer;
+  transition: all 0.2s linear;
+}
+
+ul li:hover label{
+	color: #47a39c;
+}
+
+ul li .check{
+  display: block;
+  position: absolute;
+  border: 2px solid;
+  border-radius: 100%;
+  height: 20px;
+  width: 20px;
+  top: 0;
+  z-index: 5;
+  transition: border 0.2s linear;
+}
+
+ul li:hover .check {
+  border: 2px solid #47a39c;
+}
+
+ul li .check::before {
+  display: block;
+  position: absolute;
+	content: '';
+  border-radius: 100%;
+  height: 10px;
+  width: 10px;
+  top: 5px;
+  left: 5px;
+  margin: auto;
+  transition: background 0.2s linear;
+}
+
+/* Radio Inputs */
+input[type=radio]:checked ~ .check {
+  border: 2px solid;
+}
+
+input[type=radio]:checked ~ .check::before{
+  background: #000;
+}
+
+input[type=radio]:checked ~ label{
+  color: #000;
+}
+
+
