--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,18 +45,71 @@ table {
 	border-spacing: 0;
 }
 
-.navLink:hover {
-	background-color: #47a39c;
+
+
+/* NAVBAR */
+.navLogo {
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  padding: 10px;
+  margin: 10px;
+  display: inline-block;
+  color: rgb(183, 223, 219);
+  border: 2px solid transparent;
+  border-radius: 100%;
+}
+
+.navLogoInner {
+  height: 20px;
+  fill: rgb(183, 223, 219);
+}
+
+.navLogo:hover {
+  margin: 10px;
+  border: 2px solid rgb(183, 223, 219);
+  border-radius: 100%;
+  transition: border 0.2s linear;
+  /* transition: border 160ms ease-in-out; */
+}
+
+.navLogoInner:after {
+  display: block;
+  content: '';
+  border-bottom: solid 2px rgb(183, 223, 219); 
+  transform: scaleX(0);  
+  transition: transform 0.2s linear;
+  /* transition: transform 160ms ease-in-out; */
+}
+
+.navLink {
+  text-align: center;
+  padding: 22.5px;
+  margin: auto;
+  text-decoration: none;
+  color: rgb(183, 223, 219);
+  font: 300 15px/1.2 "Poppins", sans-serif;
+  display: inline-block; 
+}
+
+.navLink:after {
+  display: block;
+  content: '';
+  border-bottom: solid 2px rgb(183, 223, 219); 
+  transform: scaleX(0);  
+  transition: transform 180ms ease-in-out;
+  /* transition: transform 0.1s linear; */
+}
+
+.navLink:hover:after {
+  transform: scaleX(1);
 }
 
 
 
 
 
-
-
-/* CHANGE THE UL LI TO CLASSES!!!!!!!! OR PUT THESE STYLES INTO THE PETSORTING COMPONENT */
-
+/* CHANGE THE UL LI TO CLASSES!!!!!!!! */
 ul li{
   position: relative;
   padding: 0 25px 0 0;
@@ -67,12 +120,15 @@ ul li input[type=radio]{
   visibility: hidden;
 }
 
+ul li input[type=checkbox]{
+  position: absolute;
+  visibility: hidden;
+}
+
 ul li label{
   display: block;
   position: relative;
   padding: 5px 0 5px 40px;
-  /* margin: 10px auto; */
-  /* height: 30px; */
   z-index: 9;
   cursor: pointer;
   transition: all 0.2s linear;
@@ -82,7 +138,7 @@ ul li:hover label{
 	color: #47a39c;
 }
 
-ul li .check{
+ul li .radioCheck{
   display: block;
   position: absolute;
   border: 2px solid;
@@ -94,11 +150,26 @@ ul li .check{
   transition: border 0.2s linear;
 }
 
-ul li:hover .check {
+ul li .checkboxCheck{
+  display: block;
+  position: absolute;
+  border: 2px solid;
+  height: 20px;
+  width: 20px;
+  top: 0;
+  z-index: 5;
+  transition: border 0.2s linear;
+}
+
+ul li:hover .radioCheck {
   border: 2px solid #47a39c;
 }
 
-ul li .check::before {
+ul li:hover .checkboxCheck {
+  border: 2px solid #47a39c;
+}
+
+ul li .radioCheck::before {
   display: block;
   position: absolute;
 	content: '';
@@ -111,113 +182,96 @@ ul li .check::before {
   transition: background 0.2s linear;
 }
 
-/* Radio Inputs */
-input[type=radio]:checked ~ .check {
+ul li .checkboxCheck::before {
+  display: block;
+  position: absolute;
+	content: '';
+  margin: auto; 
+}
+
+/* Radio & Checkbox Inputs */
+input[type=radio]:checked ~ .radioCheck {
   border: 2px solid;
 }
 
-input[type=radio]:checked ~ .check::before{
+input[type=checkbox]:checked ~ .checkboxCheck {
+  border: 2px solid;
+}
+
+input[type=radio]:checked ~ .radioCheck::before{
   background: #000;
+}
+
+input[type=checkbox]:checked ~ .checkboxCheck::before{
+  left: 6px;
+  width: 5px;
+  height: 11px;
+  border: solid #000;
+  border-width: 0 4px 4px 0;
+  transform: rotate(45deg);
 }
 
 input[type=radio]:checked ~ label{
   color: #000;
 }
 
-
-/* Checkbox */
-.checkboxContainer {
-  display: block;
-  position: relative;
-  padding-left: 50px;
-  margin-bottom: 25px;
-  cursor: pointer;
-  user-select: none;
-  align-items: center;
-}
-
-.checkboxContainer input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-}
-
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 30px;
-  width: 30px;
-  background: lightpink;
-}
-
-.checkboxContainer:hover input ~ .checkmark {
-  background: darkorchid;
-}
-
-.checkboxContainer input:checked ~ .checkmark {
-  background: violet;
-}
-
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-.checkboxContainer input:checked ~ .checkmark:after {
-  display: block;
-}
-
-.checkboxContainer .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 11px;
-  height: 16px;
-  border: solid var(--clr-white);
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-
-ul li input[type=checkbox]{
-  position: absolute;
-  visibility: hidden;
+input[type=checkbox]:checked ~ label{
+  color: #000;
 }
 
 
 /* LOGIN, REGISTRATION */
-.formButton {
+
+.formButton,
+.searchButton {
   padding: 16px;
-  margin-top: 16px;
-  width: 100%;
   cursor: pointer;
   border-color: transparent;
   text-transform: uppercase;
   background: rgb(34, 102, 96);
   color: #fff;
+}
+
+.formButton {
+  margin-top: 16px;
+  width: 100%;
   border-radius: 0.25rem;
 }
 
-.formButton:hover {
+.searchButton {
+  border-radius: 0 0.25rem 0.25rem 0;
+}
+
+.formButton:hover,
+.searchButton:hover {
   background: rgb(71, 163, 156);
 }
 
-.formInput {
+.formInput,
+.searchInput {
   padding: 16px;
   width: 300px;
   background: rgb(183, 223, 219);
   border: none;
   font: 300 15px/1.2 "Poppins", sans-serif;
+}
+
+.formInput {
   border-radius: 0 0.25rem 0.25rem 0;
 }
 
-.formInput:hover {
+.searchInput {
+  border-radius: 0.25rem 0 0 0.25rem;
+}
+
+.formInput:hover,
+.searchInput:hover {
   background: rgb(191, 230, 226);
+}
+
+.formInput:focus,
+.searchInput:focus {
+  outline: none;
 }
 
 .formLink {
