--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -220,6 +220,81 @@ input[type=checkbox]:checked ~ label{
   color: #000;
 }
 
+/* BACKGROUND FOR LOGIN/REGISTRATION */
+
+.backgroundFilter {
+  /* filter: brightness(60%); */
+  /* background-color: rgb(0, 0, 0); */
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  /* background-color: rgba(34, 102, 96, 0.5); */
+  background-color: rgb(34, 102, 96);
+}
+
+.backgroundImage {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+ 
+  /* opacity: 0.5; */
+  
+  /* animation: fade 5s infinite; */
+
+
+ /* opacity: 1;
+	animation-name: fade;
+	animation-iteration-count: 3;
+	animation-timing-function: ease-out;
+	animation-duration: 5000ms; */
+}
+
+/* @keyframes fade {
+	100% {
+		opacity: 1;
+	}
+  0% {
+		opacity: 0;
+	}
+  100% {
+    opacity: 1;
+  }
+} */
+
+/* @keyframes fade {
+	0% {
+		opacity: 0;
+	}
+  25% {
+		opacity: 1;
+	}
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+} */
+
+.fade-in {
+  filter: brightness(60%); 
+  /* opacity: 1; */
+  /* transition: opacity 2s ease-in; */
+  /* transition: opacity 4s ease; */
+  
+  transition: opacity 2s ease-in;
+}
+
+.fade-out {
+  filter: brightness(60%);
+  opacity: 0;
+  transition: opacity 2s ease;
+}
+
 
 /* LOGIN, REGISTRATION WITH LOGO */
 .container {
