--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -221,16 +221,7 @@ input[type=checkbox]:checked ~ label{
 }
 
 /* BACKGROUND FOR LOGIN/REGISTRATION */
-
-.backgroundFilter {
-  /* filter: brightness(60%); */
-  /* background-color: rgb(0, 0, 0); */
-  /* background-color: rgba(0, 0, 0, 0.5); */
-  /* background-color: rgba(34, 102, 96, 0.5); */
-  background-color: rgb(34, 102, 96);
-}
-
-.backgroundImage {
+.fade-in1 {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -240,61 +231,52 @@ input[type=checkbox]:checked ~ label{
   position: relative;
   height: 100vh;
   overflow: hidden;
- 
-  /* opacity: 0.5; */
-  
-  /* animation: fade 5s infinite; */
-
-
- /* opacity: 1;
-	animation-name: fade;
-	animation-iteration-count: 3;
-	animation-timing-function: ease-out;
-	animation-duration: 5000ms; */
-}
-
-/* @keyframes fade {
-	100% {
-		opacity: 1;
-	}
-  0% {
-		opacity: 0;
-	}
-  100% {
-    opacity: 1;
-  }
-} */
-
-/* @keyframes fade {
-	0% {
-		opacity: 0;
-	}
-  25% {
-		opacity: 1;
-	}
-  75% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-} */
-
-.fade-in {
-  filter: brightness(60%); 
-  /* opacity: 1; */
-  /* transition: opacity 2s ease-in; */
-  /* transition: opacity 4s ease; */
-  
-  transition: opacity 2s ease-in;
-}
-
-.fade-out {
-  filter: brightness(60%);
+  filter: brightness(90%); 
   opacity: 0;
-  transition: opacity 2s ease;
+  transition: opacity 1s ease-in-out;
 }
 
+.fade-out1 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+  filter: brightness(90%); 
+  transition: opacity 1s ease-in-out;
+}
+
+.fade-in2 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+  filter: brightness(90%);
+  transition: opacity 1s ease-in-out;
+}
+
+.fade-out2 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+  filter: brightness(90%);
+  transition: opacity 1s ease-in-out;
+}
 
 /* LOGIN, REGISTRATION WITH LOGO */
 .container {
