--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -106,11 +106,28 @@ table {
 }
 
 
+/* Report - Picture */
+.petPicture {
+  width: 300px;  
+  height: 300px;
+  /* border: 2px solid black; */
+  cursor: pointer; 
+  position: relative;
 
-
+  /* delete later, or add to img tag: */
+  background: rgb(221 226 225); 
+  object-fit: cover;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
 
 
 /* CHANGE THE UL LI TO CLASSES!!!!!!!! */
+.radioList {
+  display: flex;
+}
+
 ul li{
   position: relative;
   padding: 0 25px 0 0;
