--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -103,29 +103,44 @@ table {
 
 
 /* Report - Picture */
+
 .petPicture {
-  width: 350px;  
+  /* width: 350px;   */
   /* height: 350px; */
   cursor: pointer; 
   position: relative;
-
-  /* delete later, or add to img tag: */
-  /* background: rgb(236 236 236); */
   object-fit: cover;
   margin-left: auto;
   margin-right: auto;
   display: block;
+
 }
 
+.petListPicture {
+  width: 350px;  
+  /* height: 350px; */
+  object-fit: cover;
+  margin-left: auto;
+  margin-right: auto;
+  background: rgb(236 236 236);
+}
 
 /* CHANGE THE UL LI TO CLASSES!!!!!!!! */
 .radioList {
   display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start; 
+}
+
+.checkboxOption,
+.radioButtonOption {
+  margin-top: 15px;
 }
 
 ul li{
   position: relative;
   padding: 0 25px 0 0;
+  display: flex;
 }
 
 ul li input[type=radio]{
@@ -143,6 +158,7 @@ ul li label{
   position: relative;
   padding: 5px 0 5px 40px;
   z-index: 9;
+  width: 85px;
   cursor: pointer;
   transition: all 0.2s linear;
 }
@@ -313,7 +329,8 @@ input[type=checkbox]:checked ~ label{
   background: rgba(255,255,255); 
   padding: 50px; 
   height: fit-content;
-  min-width: 350px;
+  /* min-width: 350px; */
+  width: 450px;
   border-radius: 25px; 
   box-shadow: 7px 12px 24px -8px rgba(0,0,0,0.40);
 }
@@ -369,13 +386,26 @@ input[type=checkbox]:checked ~ label{
 .optionalButton {
   display: flex;
   justify-content: space-between;
-  background: rgb(255, 227, 227);
+  align-items: center;
+  justify-content: center;
+  /* background: #fff; */
+
+  /* background: rgb(176,240,235); */
+  background: rgb(255,255,255);
+
+  /* box-shadow: inset 0px 40px 24px -25px rgb(0 0 0 / 30%);  */
+  box-shadow: 0px 12px 12px -12px rgb(0 0 0 / 50%);
 }
+
+/* .optionalButton:after {
+  box-shadow: 0;
+} */
 
 .optionalButton,
 .formButton {
   cursor: pointer;
-  border-color: transparent;
+  /* border-color: transparent; */
+  border: none;
   text-transform: uppercase;
   width: 100%;
   margin-top: 40px;
@@ -383,7 +413,7 @@ input[type=checkbox]:checked ~ label{
 }
 
 .formButton {
-  padding: 16px;
+  padding: 20px;
   border-radius: 0.25rem;
   background: rgb(34, 102, 96);
   color: #fff;
@@ -397,16 +427,31 @@ input[type=checkbox]:checked ~ label{
   fill: #226660;
 }
 
+.showHidePassword {
+  fill:rgb(172, 172, 172);
+  cursor: pointer;
+  background: none;
+}
+
+.showHidePassword:hover {
+  fill: #226660;
+  transition: fill 0.2s linear;
+}
+
 .arrowDown {
   padding: 16px;
-  fill: #226660;
+  /* fill: #226660; */
   transform: scaleY(-1);
 }
 
+.showHidePassword,
 .searchButton,
 .formLabel {  
   padding: 18px;
   width: fit-content;
+  border-top: none;
+  border-left: none;
+  border-right: none;
   border-bottom: 2px solid rgb(34, 102, 96);
 }
 
