--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -146,7 +146,7 @@ table {
   justify-content: center;
   /* align-self: center; */
   align-items: center;
-  height: 800px;
+  height: 400px;
 }
 
 .landingPageVideo {
@@ -165,7 +165,7 @@ table {
   font: 700 38px/1.2 'Poppins', sans-serif;
   display: flex;
   width: 100%;
-  padding-top: 50px;
+  padding-top: 100px;
   padding-bottom: 100px;
   justify-content: center;
   align-items: center;
@@ -199,7 +199,7 @@ table {
 }
 
 .petCardInner {
- display: flex;
+ /* display: flex; */
 }
 
 .petTextBox {
@@ -227,6 +227,7 @@ table {
   font: 700 32px/1.2 'Poppins', sans-serif;
   font-size: 35px;
   margin: 40px 0 30px 0;
+  text-transform: capitalize;
 }
 
 .petId {
@@ -522,14 +523,14 @@ input[type=checkbox]:checked ~ label{
 
 .inputBox,
 .searchBox {
-  padding-top: 10px;
+  /* padding-top: 10px; */
   display: flex;
 }
 
-#region,
+/* #region,
 #search {
   text-transform: capitalize;
-}
+} */
 
 .showInputs {
   /* display: block; */
