--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -199,7 +199,7 @@ table {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  padding-top: 70px;
 }
 
 .petProfileCard {
@@ -207,35 +207,26 @@ table {
   box-shadow: 7px 12px 24px -8px rgba(0,0,0,0.40);
   background: rgba(255,255,255);
   display: flex;
-  /* width: 60%; */
-  /* padding: 100px; */
   padding: 50px;
   justify-content: center;
   align-items: center;
-
   width: 70%;
-  /* min-width: 70%; */
+  max-height: 70%;
 } 
 
 .petProfileCardInner {
   display: flex;
   width: 100%;
   min-height: 600px;
-  /* width: 900px;
-  height: 600px; */
 }
 
 .petProfilePictureContainer {
-  /* flex: 50%; */
   position: relative;
   overflow: hidden;
   background: #aaaaaa; 
   width: 50%;
   position: relative;
-  /* height: 450px; */
   overflow: hidden;
-  /* width: 100%; */
-
 }
 
 .petProfilePicture {
@@ -253,16 +244,11 @@ table {
 }
 
 .petProfileTextBox {
-
-    /* flex: 50%; */
     padding: 40px;
     background: #ebebeb; 
     min-height: 300px;
     width: 50%;
-  
-    /* max-width: 40%; */
     overflow-wrap: break-word;
-
 }
 
 /* Lost & Found - PetList */
@@ -274,6 +260,9 @@ table {
   padding-bottom: 100px;
   justify-content: center;
   align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
 }
 
 .petContainer {
@@ -284,7 +273,7 @@ table {
 }
 
 .petCard {
-	width: 20%;
+	/* width: 20%; */
   background: rgba(255,255,255); 
   margin-bottom: 60px;
   margin-right: 30px;
@@ -446,6 +435,7 @@ table {
   top: 50%;
   z-index: 2;
   cursor: pointer;
+  text-align: center;
 }
 
 /* .inputfile:focus,
@@ -701,7 +691,8 @@ input[type=checkbox]:checked ~ label{
   background: rgba(255,255,255); 
   padding: 50px; 
   height: fit-content;
-  width: 450px;
+  /* width: 450px; */
+  width: 30%;
   border-radius: 25px; 
   box-shadow: 7px 12px 24px -8px rgba(0,0,0,0.40);
 }
@@ -764,6 +755,36 @@ input[type=checkbox]:checked ~ label{
   box-shadow: 0px 12px 12px -12px rgb(0 0 0 / 50%);
 }
 
+
+.backButtonContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.backButtonBox {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 100px;
+  width: 70%;
+}
+
+.backButton {
+  background: none;
+  /* background: #DDD; */
+  background: rgb(34, 102, 96);
+  padding: 20px;
+  border-radius: 0.25rem;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  cursor: pointer;
+  border: none;
+  text-transform: uppercase;
+  z-index: 1;
+}
+
 .optionalButton,
 .formButton {
   cursor: pointer;
@@ -773,6 +794,8 @@ input[type=checkbox]:checked ~ label{
   margin-top: 40px;
   z-index: 1;
 }
+
+
 
 .formButton {
   padding: 20px;
@@ -1036,3 +1059,300 @@ input[type=checkbox]:checked ~ label{
   fill: rgb(34, 102, 96); 
   transition: fill 0.2s linear;
 }
+
+
+/* Media Queries */
+@media only screen and (min-width: 200px) {
+  .formBox {
+    width: 150%;
+  }
+
+  .petProfileCard,
+  .petCard {
+    padding: 0;
+    width: 80%;
+  }
+  
+  .petProfilePictureContainer,
+  .petPictureContainer {
+    border-radius: 25px 25px 0 0;
+  }
+
+  .petProfileTextBox,
+  .petTextBox {
+    border-radius: 0 0 25px 25px;
+  }
+
+  .lostAndFoundHeadline {
+    padding-bottom: 50px;
+  }
+  
+  .tableCell:first-child {
+    width: 20px;
+  }
+
+  .tableCell:nth-child(2) {
+    overflow-wrap: anywhere;
+    width: unset;
+  }
+
+  .tableCell {
+    padding-right: 20px;
+    width: 0;
+    overflow-wrap:normal;
+    line-height: unset;
+  } 
+
+  /* Pet Profile - Card */
+  .petProfileCardInner {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: unset;
+  }
+
+  .petProfilePictureContainer {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    overflow: hidden;
+    background: #aaaaaa;
+    width: 50%;
+    position: relative;
+    height: 450px;
+    overflow: hidden;
+    width: 100%;
+  }
+
+  .petProfileTextBox {
+    width: auto;
+  }
+
+  .backButtonBox {
+    display:unset;
+    justify-content:unset;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 0;
+    width: auto;
+  }
+
+}
+
+@media only screen and (min-width: 300px) {
+  .formBox {
+    width: 120%;
+  }
+
+  .petProfileCard,
+  .petCard {
+    padding: 0;
+    width: 80%;
+  }
+  
+  .petProfilePictureContainer,
+  .petPictureContainer {
+    border-radius: 25px 25px 0 0;
+  }
+
+  .petProfileTextBox,
+  .petTextBox {
+    border-radius: 0 0 25px 25px;
+  }
+}
+
+
+@media only screen and (min-width: 400px) {
+  .formBox {
+    width: 120%;
+  }
+
+  .petCard {
+    padding: 50px;
+  }
+
+  .petProfileCard,
+  .petCard {
+    padding: 0;
+    width: 80%;
+  }
+  
+  .petProfilePictureContainer,
+  .petPictureContainer {
+    border-radius: 25px 25px 0 0;
+  }
+
+  .petProfileTextBox,
+  .petTextBox {
+    border-radius: 0 0 25px 25px;
+  }
+
+} 
+
+
+@media only screen and (min-width: 500px) {
+  .formBox {
+    width: 100%;
+  }
+
+  .petProfileCard,
+  .petCard {
+    padding: 0;
+    width: 80%;
+  }
+  
+  .petProfilePictureContainer,
+  .petPictureContainer {
+    border-radius: 25px 25px 0 0;
+  }
+
+  .petProfileTextBox,
+  .petTextBox {
+    border-radius: 0 0 25px 25px;
+  }
+}
+
+
+@media only screen and (min-width: 600px) {
+  .formBox {
+    width: 100%;
+  }
+
+  .petProfileCard,
+  .petCard {
+    width: 70%;
+    padding: 50px;
+  }
+
+  .petProfilePictureContainer,
+  .petPictureContainer {
+    border-radius: 0;
+  }
+
+  .petProfileTextBox,
+  .petTextBox {
+    border-radius: 0;
+  }
+
+  .lostAndFoundHeadline {
+    padding-bottom: 100px;
+  }
+
+}
+
+@media only screen and (min-width: 768px) {
+  .formBox {
+    width: 90%;
+  }
+
+  .petCard {
+    width: 70%;
+  }
+} 
+
+@media only screen and (min-width: 992px) {
+  .formBox {
+    width: 70%;
+  }
+
+  .petCard {
+    width: 70%;
+  }
+} 
+
+@media only screen and (min-width: 1200px) {
+  .formBox {
+    width: 70%;
+  }
+
+  .petCard {
+    width: 30%;
+  }
+
+  /* Pet Profile - Card */
+   .petProfileContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 70px;
+  }
+  
+  .petProfileCard {
+    border-radius: 25px;  
+    box-shadow: 7px 12px 24px -8px rgba(0,0,0,0.40);
+    background: rgba(255,255,255);
+    display: flex;
+    padding: 50px;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    max-height: 70%;
+  } 
+  
+  .petProfileCardInner {
+    display: flex;
+    width: 100%;
+    min-height: 600px;
+    flex-direction: row;
+  }
+
+  .petProfilePictureContainer {
+    position: relative;
+    overflow: hidden;
+    background: #aaaaaa; 
+    width: 50%;
+    position: relative;
+    overflow: hidden;
+
+    flex-direction: row;
+    display: flex;
+    height: unset;
+  }
+
+  .petProfilePicture {
+    position: absolute;
+    top: 50%;    
+    left: 50%;
+    right: 50%;
+    margin: auto;
+    transform: translate( -50%, -50%);
+    object-fit: cover;
+    min-height: 100%;
+    min-width: 100%;
+    max-height: 150%;
+    max-width: 150%;
+  }
+  
+  .petProfileTextBox {
+      padding: 40px;
+      background: #ebebeb; 
+      min-height: 300px;
+      width: 50%;
+      overflow-wrap: break-word;
+  }
+  
+  .backButtonBox {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 100px;
+    width: 70%;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .petCard {
+    width: 20%;
+  }
+}
+
+@media only screen and (min-width: 2100px) {
+  .formBox {
+    width: 30%;
+  }
+
+  .petCard {
+    width: 15%;
+  }
+} 
